# ros_lidar_driver

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
apps/: lidar_start_nodelet.cpp
include/: driver.h
launch/: gangkou_lidar.launch  lidar_start_nodelet_Innoviz_demo.launch  lidar_start_nodelet_P40P_demo.launch  lidar_start_nodelet_RS32_demo.launch  lidar_start_nodelet_VLP16_demo.launch
param/: correction.csv  direction.csv
param/RS32/NP19/left/: ChannelNum.csv  CurveRate.csv  angle.csv  curves.csv
param/RS32/NP19/right/: ChannelNum.csv  CurveRate.csv  angle.csv  curves.csv
